Modificacion del index

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <!-- Footer -->
             <tr style="background-color: #9F5F7F;">
                 <td colspan="2" style="text-align: left; padding-left: 50px; color: white;">
-                    <h5 style="font-weight: bold; font-size: 15px; margin-top: 15px; margin-bottom: 0px; margin-left: 6px;">Natura esta donde vos estas</h5>
-                    <h5 style="font-size: 14px;font-weight: lighter; margin-top: 0px;">Elegi comprar donde más te guste</h5>
+                    <h5 style="font-weight: bold; font-size: 15px; margin-top: 15px; margin-bottom: 0px; margin-left: 6px;">Natura está donde vos estás</h5>
+                    <h5 style="font-size: 14px;font-weight: lighter; margin-top: 0px;">Elegí comprar donde más te guste</h5>
                 </td>
                 <td colspan="2" style="text-align: right; padding-right: 20px;">
                     <img src="img/Footer.png" alt="Footer Logo" style="max-width: 75%; margin: 10px;">
